--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,24 @@
         <module>datai-admin</module>
         <module>datai-core</module>
         <module>datai-executor</module>
+        <module>datai-rpc</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <slf4j-api.version>1.7.28</slf4j-api.version>
+        <netty.version>4.1.43.Final</netty.version>
+        <hessian.version>4.0.63</hessian.version>
+        <spring.version>4.3.25.RELEASE</spring.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+    </dependencies>
 
 </project>
