--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,14 @@
         <netty.version>4.1.43.Final</netty.version>
         <hessian.version>4.0.63</hessian.version>
         <spring.version>4.3.25.RELEASE</spring.version>
+        <lombok.version>1.18.16</lombok.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
